--- a/popup.html
+++ b/popup.html
@@ -52,10 +52,19 @@
       <span class="radio-label">IRAQ</span>
     </label>
   </div>
+  <div class="container">
+    <h3>Link Attribute Tooltip</h3>
+    <p>Hover over any link to see its attributes:</p>
+    <label class="switch">
+      <input type="checkbox" id="enableInspect">
+      <span class="slider round"></span>
+    </label>
+  </div>
   <button id="checkLinks">Check Links</button>
   
   <h3>Scan Results</h3>
   <div id="results"></div>
+  <div id="linkTooltip" style="display: none; position: absolute; background-color: #f9f9f9; border: 1px solid #ccc; padding: 5px;"></div>
   <div id="credits">
     <p>Credits to <a href="https://github.com/danishfareed/">Danish</a></p>
   </div>
