--- a/popup.html
+++ b/popup.html
@@ -51,6 +51,11 @@
       <img src="/country_icons/iraq.png" alt="IRAQ Flag" class="flag-icon">
       <span class="radio-label">IRAQ</span>
     </label>
+    <label>
+      <input type="radio" name="market" value="TURKEY">
+      <img src="/country_icons/turkey.png" alt="TURKEY Flag" class="flag-icon">
+      <span class="radio-label">TURKEY</span>
+    </label>
   </div>
   <div class="container">
     <h3>Link Attribute Tooltip</h3>
