--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,7 @@
    
   </style>
 </head>
-<body style="min-width: 500px;">
+<body style="min-width: 500px;" class="samsung-edm-links-checker">
   <h1>Samsung EDM Links Checker</h1>
   <div id="markets">
     <label>
